update: attempt at cors issue in production fix